--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
       "extensions": [],
       "filenamesGlob": [
         "tsconfig.vscode",
+        "tsconfig.tsd",
       ],
       "extensionsGlob": [ "json" ],
       "filename": true,
