--- a/tsconfig.tsd.json
+++ b/tsconfig.tsd.json
@@ -1,6 +1,6 @@
 // Special TS project just for source files so we can build types for those.
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.build.json",
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true
