--- a/tsconfig.vscode.json
+++ b/tsconfig.vscode.json
@@ -1,6 +1,12 @@
 {
   "extends": "./tsconfig.build.json",
+  "include": [
+    "src",
+    "test"
+  ],
   "compilerOptions": {
+    "rootDir": null,
+    "checkJs": true,
     "noEmit": true
   }
 }
