--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "release": "sucrase-node script/release.ts",
     "run-examples": "sucrase-node example-runner/example-runner.ts",
     "test": "yarn lint && yarn test-only",
-    "test-only": "mocha './test/**/*.ts'",
+    "test-only": "mocha './test/**/*.ts' ---bail",
     "integration-test": "cd integration-test && yarn && yarn link @sucrase/jest-plugin && mocha --timeout 10000 ./integration-tests.ts",
     "test262": "sucrase-node spec-compliance-tests/test262/run-test262.ts",
     "check-babel-tests": "sucrase-node spec-compliance-tests/babel-tests/check-babel-tests.ts",
@@ -50,7 +50,6 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@jridgewell/trace-mapping": "^0.3.18",
-    "@septh/ts-run": "^1.3.0",
     "@types/mocha": "^9.1.1",
     "@types/mz": "^2.7.4",
     "@types/node": "^20.3.2",
@@ -68,7 +67,6 @@
     "prettier": "^2.8.8",
     "sucrase": "^3.35.0",
     "test262-harness": "^10.0.0",
-    "ts-interface-builder": "^0.3.3",
     "typescript": "~5.0"
   },
   "dependencies": {
@@ -77,8 +75,7 @@
     "glob": "^10.3.10",
     "lines-and-columns": "^1.1.6",
     "mz": "^2.7.0",
-    "pirates": "^4.0.1",
-    "ts-interface-checker": "^0.1.9"
+    "pirates": "^4.0.1"
   },
   "engines": {
     "node": ">=16 || 14 >=14.17"
