--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "noImplicitReturns": true,
+    "noImplicitOverride": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "lib": ["es2020", "dom"]
