--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "prettier": "^2.8.8",
     "sucrase": "^3.35.0",
     "test262-harness": "^10.0.0",
-    "typescript": "~5.0"
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@jridgewell/gen-mapping": "^0.3.2",
