--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitOverride": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
+    "skipLibCheck": true,
     "lib": ["es2020", "dom"]
   },
   "include": [
